# tacbot

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  bot.py  pyproject.toml  requirements.txt
cogs/: __init__.py  application_handler.py  chat_commands.py  database.py  event_handler.py  google_forms_service.py  member_events.py
scripts/: check.sh
tests/: __init__.py  conftest.py  test_application_handler.py  test_chat_commands.py  test_database.py  test_error_scenarios.py  test_event_handler.py  test_google_forms_service.py  test_integration.py  test_performance.py
